ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/MIS_RC_Limit_TopSheet__c.object-meta.xml
<CustomObject>
    <label>MIS RC Limit TopSheet</label>
    <nameField>
        <label>MIS_RC_Limit_TopSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MIS RC Limit TopSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>