ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/All_Ageing_Gtr_90__c.field-meta.xml
<CustomField>
    <fullName>All_Ageing_Gtr_90__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All_Ageing_Gtr_90</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>