ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/All_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>All_Max_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>