ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/All_Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>All_Max_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>All Max Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>