ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/Ben_Type__c.field-meta.xml
<CustomField>
    <fullName>Ben_Type__c</fullName>
    <label>Ben Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>