ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/Bl_Code__c.field-meta.xml
<CustomField>
    <fullName>Bl_Code__c</fullName>
    <label>Bl Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>