ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/Fin_Amt__c.field-meta.xml
<CustomField>
    <fullName>Fin_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fin Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>