ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/Max_Days__c.field-meta.xml
<CustomField>
    <fullName>Max_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Max Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>