ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <label>Process Date</label>
    <type>DateTime</type>
</CustomField>