ProdIND/ProdPrograms/force-app/main/default/objects/MIS_RC_Limit_TopSheet__c/fields/RC_Pending__c.field-meta.xml
<CustomField>
    <fullName>RC_Pending__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RC Pending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>